--- a/.github/workflows/sanbox-deployment.yml
+++ b/.github/workflows/sanbox-deployment.yml
@@ -24,6 +24,8 @@ jobs:
                 trigger: ".deploy"
                 environment: QA
             - uses: actions/checkout@v4
+            - name: Install Salesforce CLI
+              run: npm install -g @salesforce/cli@latest
             - name: fake regular deploy
               if: ${{ steps.branch-deploy.outputs.continue == 'true' && steps.branch-deploy.outputs.noop != 'true' }}
               run: echo "I am doing a fake regular deploy"
