--- a/.github/workflows/sanbox-deployment.yml
+++ b/.github/workflows/sanbox-deployment.yml
@@ -26,6 +26,12 @@ jobs:
             - uses: actions/checkout@v4
             - name: Install Salesforce CLI
               run: npm install -g @salesforce/cli@latest
+            - name: Populate salesforce credentials
+              run: |
+                echo '$SF_AUTH_JSON' > authFile.json
+            - name: Salesforce authentication
+              run: |
+                sf org login sfdx-url --sfdx-url-file authFile.json 
             - name: fake regular deploy
               if: ${{ steps.branch-deploy.outputs.continue == 'true' && steps.branch-deploy.outputs.noop != 'true' }}
               run: echo "I am doing a fake regular deploy"
