--- a/.github/workflows/sanbox-deployment.yml
+++ b/.github/workflows/sanbox-deployment.yml
@@ -37,7 +37,7 @@ jobs:
             - name: Get Delta
               run: |
                 echo y | sfdx plugins:install sfdx-git-delta
-                sf sgd source delta --to "HEAD" --from "HEAD~1" --output-dir "."
+                sf sgd source delta --to "HEAD" --from "origin/main" --output-dir "."
                 cat package/package.xml
                 ls
             - name: fake regular deploy
