Updated branch deploy sha ref

--- a/.github/workflows/sanbox-deployment.yml
+++ b/.github/workflows/sanbox-deployment.yml
@@ -39,7 +39,7 @@ jobs:
             - name: Get Delta
               run: |
                 echo y | sfdx plugins:install sfdx-git-delta
-                sf sgd source delta --to "HEAD" --from "origin/main" --output-dir "."
+                sf sgd source delta --to "HEAD" --from "HEAD^" --output-dir "."
                 cat package/package.xml
                 ls
             - name: fake regular deploy
